--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <script type="text/javascript" src="./src/main.js"></script>
   </head>
   <body>
-      <div id="keyboard">
-      </div>
+    <div id="blackLabels"></div>
+    <div id="keyboard">
+    <div id="whiteLabels"></div>
+    </div>
   </body>
 </html>
