Add labels for playing with keyboard and radios for switching

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <script type="text/javascript" src="./src/main.js"></script>
   </head>
   <body>
+    <menu>
+      <input checked id="showNotes" type="radio" name="i" value="true">
+      <label for="showNotes">Show notes</label>
+      <input id="showButtons" type="radio" name="i" value="false">
+      <label for="showButtons">Play with keyboard</label>
+    </menu>
     <div id="blackLabels"></div>
     <div id="keyboard">
     <div id="whiteLabels"></div>
